# ZapEditor

./: .gitignore  CMakeLists.txt  PBRShader.frag.spv  PBRShader.vert.spv  shader.vert.spv
Models/gltf/: Gears.glb  cornellBox.glb  metalSphere.glb
Shader/: compile.bat
Shader/src/: PBRShader.frag  PBRShader.vert  debug.frag  debug.vert  outline.frag  outlineBlur.vert  outlineBlurA.frag  outlineBlurB.frag  outlinePlain.frag  outlinePlain.vert  shader.frag  shader.vert
header/: AssetBrowser.h  ComponentView.h  FileHandling.h  MainMenuBar.h  ProjectHandling.h  SceneHandling.h  SceneHierarchy.h  ViewLayer.h  Viewport.h  ZapEditor.h
src/: AssetBrowser.cpp  ComponentView.cpp  FileHandling.cpp  HitboxEditor.cpp  MainMenuBar.cpp  ProjectHandling.cpp  SceneHandling.cpp  SceneHierarchy.cpp  Settings.cpp  Viewport.cpp  ZapEditor.cpp  ZapEditor.h
src/Handlers/: ProjectHandling.cpp  ProjectHandling.h
src/Layers/: AssetBrowser.cpp  AssetBrowser.h  ComponentView.cpp  ComponentView.h  HitboxEditor.cpp  HitboxEditor.h  MainMenuBar.cpp  MainMenuBar.h  SceneHierarchy.cpp  SceneHierarchy.h  Settings.h  Viewport.cpp  Viewport.h
src/Objects/: EditorCamera.cpp  EditorCamera.h
